--- a/DashBoard/TotalFile.xaml
+++ b/DashBoard/TotalFile.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="TotalFile" Height="450" Width="800">
     <Grid>
-        <TextBlock Text="Job Status" Margin="10,32,648,355" FontWeight="Bold" FontSize="16" Foreground="#FF2148BF"/>
+        <TextBlock Text="Job Status Error Ratio" Margin="10,32,592,355" FontWeight="Bold" FontSize="16" Foreground="#FF2148BF"/>
         <lvc:PieChart Name="Chart" Series="{Binding SeriesCollection}" 
                       LegendLocation="Right" InnerRadius="50" Margin="10,79,443,70">
             <lvc:PieChart.Background>
@@ -24,7 +24,7 @@
                 <lvc:DefaultTooltip BulletSize="20"></lvc:DefaultTooltip>
             </lvc:PieChart.DataTooltip>
         </lvc:PieChart>
-        <TextBlock Text="Error Ratio" Margin="400,32,258,355" FontWeight="Bold" FontSize="16" Foreground="#FF2148BF"/>
+        <TextBlock Text="Total Error Ratio" Margin="400,32,258,355" FontWeight="Bold" FontSize="16" Foreground="#FF2148BF"/>
         <lvc:PieChart x:Name="Chart_Copy" Series="{Binding SeriesCollection1}" 
             LegendLocation="Right" InnerRadius="50" Margin="400,79,53,70">
             <lvc:PieChart.Background>
